# waiya-cup

./: .env.example  .gitignore  README.md  pyproject.toml
core/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
core/management/commands/: populate_data.py
core/templates/core/: contribute_data_form.html  contribute_data_success.html  index.html
core/templates/core/partials/: group_table.html  matches_list.html
core/templates/core/snippets/: group_table.html  matches_list.html  statistics_summary.html
django_project/: asgi.py  urls.py  wsgi.py
django_project/settings/: base.py  development.py  production.py
static/favicon/: site.webmanifest
templates/: about.html  base.html  faq.html
templates/guides/: contribution.html  index.html  usage.html
templates/snippets/: footer.html  header.html
theme/static_src/: package-lock.json  package.json  tailwind.config.js
theme/static_src/src/: styles.css
